import 'package:flutter/material.dart';

class AuthPage extends StatelessWidget {

  const AuthPage({
    super.key,
  });

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      body: Center(
          child: Text("AUTH_PAGE", style: TextStyle(fontSize: 30),)
      ),
    );
  }
}