import 'package:flutter/material.dart';

class BlocksWindow extends StatelessWidget {

  const BlocksWindow({
    super.key,
  });

  @override
  Widget build(BuildContext context) {
    return Container(
      height: 40,
      width: 100,
    );
  }
}