import 'package:flutter/material.dart';

class FeedbackWindow extends StatelessWidget {

  const FeedbackWindow({
    super.key,
  });

  @override
  Widget build(BuildContext context) {
    return Container(
      height: 40,
      width: 100,
    );
  }
}