import 'package:flutter/material.dart';

class TaskWindow extends StatelessWidget {

  const TaskWindow({
    super.key,
  });

  @override
  Widget build(BuildContext context) {
    return Container(
      height: 40,
      width: 100,
    );
  }
}